# dora-studio-local-dev

./: CLAUDE.md  Cargo.toml  TEST_PLAN.md
apps/dataflow-manager/: Cargo.toml
apps/log-viewer/: Cargo.toml
apps/telemetry-dashboard/: Cargo.toml
apps/yaml-editor/: Cargo.toml
dora-studio-client/: Cargo.toml
dora-studio-shell/: Cargo.toml
dora-studio-widgets/: Cargo.toml
playground/makepad-demo/: Cargo.toml
playground/makepad-demo/src/: api.rs
playground/makepad-demo/src/chat/: chat_screen.rs
playground/makepad-demo/src/dataflow/: dataflow_table.rs  mod.rs
playground/makepad-demo/src/otlp/: backend.rs  bridge.rs  mod.rs
playground/makepad-demo/src/otlp/signoz/: client.rs  query.rs
playground/makepad-demo/src/traces/: traces_panel.rs
playground/makepad-demo/tests/: lib.rs
playground/makepad-demo/tests/e2e/: dataflow_lifecycle.rs  full_workflow.rs
playground/makepad-demo/tests/integration/: app_tests.rs  client_tests.rs  storage_tests.rs
playground/makepad-demo/tests/mocks/: mod.rs
src/: app.rs  lib.rs  tools.rs
src/dataflow/: dataflow_table.rs
src/otlp/: backend.rs  bridge.rs  config.rs  error.rs  mod.rs  types.rs
src/otlp/signoz/: client.rs  mod.rs  query.rs  response.rs
src/traces/: mod.rs
tests/: lib.rs
tests/e2e/: mod.rs
tests/fixtures/: mod.rs
tests/integration/: mod.rs
tests/mocks/: mod.rs
