[workspace]
resolver = "2"

members = [
    "dora-studio-shell",
    "dora-studio-widgets",
    "dora-studio-client",
    "apps/*"
]

[workspace.dependencies]
# UI Framework
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
makepad-flow = { git = "https://github.com/mofa-org/makepad-flow" }
makepad-chart = { git = "https://github.com/mofa-org/makepad-chart" }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Storage (100% Rust)
datafusion = "44"
arrow = "53"
parquet = "53"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"